--- a/netty-kafka-chat-server/src/main/resources/chat.html
+++ b/netty-kafka-chat-server/src/main/resources/chat.html
@@ -114,7 +114,7 @@
       <i class="fa fa-file-o"></i> &nbsp;&nbsp;&nbsp;
       <i class="fa fa-file-image-o"></i>
 
-      <button>Send</button>
+      <button>Отправить</button>
 
     </div> <!-- end chat-message -->
 
@@ -126,10 +126,10 @@
   <li class="clearfix">
     <div class="message-data align-right">
       <span class="message-data-time" >{{time}}, Сегодня</span> &nbsp; &nbsp;
-      <span class="message-data-name" >Olia</span> <i class="fa fa-circle me"></i>
+      <span class="message-data-name" >{{login}}</span> <i class="fa fa-circle me"></i>
     </div>
     <div class="message other-message float-right">
-      {{messageOutput}}
+      {{messageText}}
     </div>
   </li>
 </script>
@@ -137,11 +137,11 @@
 <script id="message-response-template" type="text/x-handlebars-template">
   <li>
     <div class="message-data">
-      <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
+      <span class="message-data-name"><i class="fa fa-circle online"></i> {{login}}</span>
       <span class="message-data-time">{{time}}, Сегодня</span>
     </div>
     <div class="message my-message">
-      {{response}}
+      {{messageText}}
     </div>
   </li>
 </script>
