--- a/netty-kafka-chat-server/src/main/resources/chat.html
+++ b/netty-kafka-chat-server/src/main/resources/chat.html
@@ -38,7 +38,15 @@
       </li>
     </ul>
   </div>
-
+  <div class="room-set" id="chat-list">
+    <div class="search">
+      <input type="text" placeholder="search" />
+      <i class="fa fa-search"></i>
+    </div>
+    <ul class="list">
+      <li class="clearfix"></li>
+    </ul>
+  </div>
   <div class="chat">
     <div class="chat-header clearfix">
       <img src="img/avatar-small.jpg" alt="avatar">
@@ -52,58 +60,7 @@
 
     <div class="chat-history">
       <ul>
-        <li class="clearfix">
-          <div class="message-data align-right">
-            <span class="message-data-time">10:10 AM, Today</span> &nbsp; &nbsp;
-            <span class="message-data-name">Olia</span> <i class="fa fa-circle me"></i>
-
-          </div>
-          <div class="message other-message float-right">
-            Hi Vincent, how are you? How is the project coming along?
-          </div>
-        </li>
-
-        <li>
-          <div class="message-data">
-            <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-            <span class="message-data-time">10:12 AM, Today</span>
-          </div>
-          <div class="message my-message">
-            Are we meeting today? Project has been already finished and I have results to show you.
-          </div>
-        </li>
-
-        <li class="clearfix">
-          <div class="message-data align-right">
-            <span class="message-data-time">10:14 AM, Today</span> &nbsp; &nbsp;
-            <span class="message-data-name">Olia</span> <i class="fa fa-circle me"></i>
-
-          </div>
-          <div class="message other-message float-right">
-            Well I am not sure. The rest of the team is not here yet. Maybe in an hour or so? Have you faced any problems at the last phase of the project?
-          </div>
-        </li>
-
-        <li>
-          <div class="message-data">
-            <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-            <span class="message-data-time">10:20 AM, Today</span>
-          </div>
-          <div class="message my-message">
-            Actually everything was fine. I'm very excited to show this to our team.
-          </div>
-        </li>
-
-        <li>
-          <div class="message-data">
-            <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-            <span class="message-data-time">10:31 AM, Today</span>
-          </div>
-          <i class="fa fa-circle online"></i>
-          <i class="fa fa-circle online" style="color: #AED2A6"></i>
-          <i class="fa fa-circle online" style="color:#DAE9DA"></i>
-        </li>
-
+        <li></li>
       </ul>
 
     </div> <!-- end chat-history -->
@@ -121,6 +78,17 @@
   </div> <!-- end chat -->
 
 </div>
+
+<script id="room-set-item-template" type="text/x-handlebars-template">
+  {{#each objects}}
+  <li class="clearfix">
+    <div class="name chat-item" data-id="{{id}}">
+      <i class="fa fa-circle chats"></i>
+      {{name}}
+    </div>
+  </li>
+  {{/each}}
+</script>
 
 <script id="message-template" type="text/x-handlebars-template">
   <li class="clearfix">
@@ -145,6 +113,7 @@
     </div>
   </li>
 </script>
+
 <script src="js/base64.js"></script>
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="js/handlebars.min.js"></script>
