--- a/netty-kafka-chat-server/src/main/resources/chat_old.html
+++ b/netty-kafka-chat-server/src/main/resources/chat_old.html
@@ -44,9 +44,9 @@
             let data = JSON.parse(event.data);
             date = new Date(data.data.ts);
             if(data.data.recipient === "") {
-                document.getElementById("chatbox").innerText += "\n" + data.data.sender + ": " + data.data.message + " " + date.toLocaleString('ru-RU');
+                document.getElementById("chatbox").innerText += "\n" + data.data.sender + ": " + data.data.chatMessage + " " + date.toLocaleString('ru-RU');
             } else if(data.data.sender === login || data.data.recipient === login){
-                document.getElementById("chatbox").innerText += "\n" + data.data.sender + " для " + data.data.recipient + ": " + data.data.message + " " + date.toLocaleString('ru-RU');
+                document.getElementById("chatbox").innerText += "\n" + data.data.sender + " для " + data.data.recipient + ": " + data.data.chatMessage + " " + date.toLocaleString('ru-RU');
             }
         };
         socket.onopen = function (event) {
@@ -64,14 +64,14 @@
         }
         if (socket.readyState === WebSocket.OPEN) {
 
-            let message = {
-                "messageType": "MESSAGE",
-                "operationType":"CREATE",
+            let chatMessage = {
+                "MESSAGETYPE": "MESSAGE",
+                "OPERATIONTYPE":"CREATE",
                 "recipient_id": document.getElementById("recipient").value,
                 "messageText": messageText,
             };
 
-            let messageJSON = JSON.stringify(message);
+            let messageJSON = JSON.stringify(chatMessage);
             //console.log(messageJSON);
 
             socket.send(messageJSON);
@@ -87,7 +87,7 @@
         <p class="logout"><a id="exit" href="#">Выйти</a></p>
     </div>
     <div id="chatbox"></div>
-    <form name="message" action="">
+    <form name="chatMessage" action="">
         <input name="chat_id" type="hidden" id="chat_id" value="48" />
         <input name="recipient" type="text" id="recipient" />
         <input name="messageText" type="text" id="messageText" />
