--- a/netty-kafka-chat-server/src/main/resources/chat.html
+++ b/netty-kafka-chat-server/src/main/resources/chat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Sppcode Live Chat Tutorial</title>
+  <title>Netty Kafka Chat</title>
   <meta name="description" content="Tuts+ Chat Application" />
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <link href="css/reset.min.css" rel="stylesheet"/>
@@ -11,15 +11,6 @@
 </head>
 <body>
 <div class="container clearfix">
-  <div class="people-list" id="people-list">
-    <div class="search">
-      <input type="text" placeholder="search" />
-      <i class="fa fa-search"></i>
-    </div>
-    <ul class="list">
-      <li></li>
-    </ul>
-  </div>
   <div class="room-set" id="chat-list">
     <div class="search">
       <input type="text" placeholder="search" />
@@ -34,10 +25,9 @@
       <img src="img/avatar-small.jpg" alt="avatar">
 
       <div class="chat-about">
-        <div class="chat-with">Chat with Vincent Porter</div>
+        <div class="chat-with"></div>
         <div class="chat-num-messages">already 1 902 messages</div>
       </div>
-      <i class="fa fa-star"></i>
     </div> <!-- end chat-header -->
 
     <div class="chat-history">
@@ -49,16 +39,9 @@
 
     <div class="chat-message clearfix">
       <textarea name="message-to-send" id="message-to-send" placeholder="Type your message" rows="3"></textarea>
-
-      <i class="fa fa-file-o"></i> &nbsp;&nbsp;&nbsp;
-      <i class="fa fa-file-image-o"></i>
-
       <button>Отправить</button>
-
     </div> <!-- end chat-message -->
-
   </div> <!-- end chat -->
-
 </div>
 
 <script id="room-set-item-template" type="text/x-handlebars-template">
